backend/api/tests/integration/user/snapshots/integration__user__public_user__browse_user_resources.snap
---
source: tests/integration/user/public_user.rs
expression: body

---
{
  "resources": [
    {
      "id": "286b828c-1dd9-11ec-8426-571b03b2d3df",
      "displayName": "link test",
      "resourceTypeId": "a91aca34-519e-11ec-ab46-175eaaf1ff23",
      "link": "url://url.url.url/urlese"
    },
    {
      "id": "286b82fa-1dd9-11ec-8426-2b6953011bae",
      "displayName": "link test",
      "resourceTypeId": "a91aca34-519e-11ec-ab46-175eaaf1ff23",
      "link": "url://url.url.url/url"
    }
  ],
  "pages": 1,
  "totalResourceCount": 2
}
