backend/api/tests/integration/user/snapshots/integration__user__public_user__browse_users_with_circles.snap
---
source: tests/integration/user/public_user.rs
expression: body
---
{
  "users": [
    {
      "id": "a641fd6e-e41b-11eb-8176-57df101c2201",
      "username": "test2",
      "givenName": "Scrappy",
      "familyName": "Doo",
      "profileImage": null,
      "badge": null,
      "organization": "test2 org",
      "circles": [
        "829606d0-f185-11ec-b9e4-5fadfd7252f6",
        "a3126bec-f185-11ec-b9e4-5fa4e257b5a1"
      ],
      "totalAssetCount": 0
    },
    {
      "id": "1f241e1b-b537-493f-a230-075cb16315be",
      "username": "test",
      "givenName": "Bobby",
      "familyName": "Tables",
      "profileImage": null,
      "badge": null,
      "organization": "test org",
      "circles": [
        "829606d0-f185-11ec-b9e4-5fadfd7252f6"
      ],
      "totalAssetCount": 0
    }
  ],
  "pages": 1,
  "totalUserCount": 2
}
